fix filter text overflow bug (VHX-345) (#54)

--- a/quartz-js/components/radio/styles/radio.scss
+++ b/quartz-js/components/radio/styles/radio.scss
@@ -36,7 +36,6 @@
     height: 20px;
     line-height: 20px;
     margin: 0px;
-    float: left;
     box-sizing: border-box;
 
     .radio--icon {
@@ -93,9 +92,12 @@
       }
     }
     .radio--label {
-      display: block;
-      float: left;
+      display: inline-block;
       height: 20px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      width: 90%;
     }
   }
 
